--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 
 
     <div class="row center-align">
-        <div id="logo" class="row">
+        <div id="logo_login" class="row">
             <!--<img src="assets/img/logo_12Tree_resize.jpg">-->
         </div>
         <div class="row">
