--- a/src/main/resources/templates/Plot/plotMap.html
+++ b/src/main/resources/templates/Plot/plotMap.html
@@ -15,7 +15,7 @@
                 </div>
                 <!-- Un test de map -->
                 <script th:inline="javascript">
-                    var plots = /*[[${plots}]]*/ '';
+                    var plots = [(${plots})];
                 </script>
                 <div th:replace="common/map :: map"></div>
                 <!-- Un test deux -->
