--- a/src/main/resources/templates/common/sheetProject.html
+++ b/src/main/resources/templates/common/sheetProject.html
@@ -5,12 +5,12 @@
     <table class="bordered highlight responsive-table">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Begin date</th>
-            <th>End Date</th>
-            <th>Country</th>
-            <th>Company</th>
+            <th><a class="sortable" data-sorted-by="id" href="#">ID</a></th>
+            <th><a class="sortable" data-sorted-by="name" href="#">Name</a></th>
+            <th><a class="sortable"  data-sorted-by="beginDate" href="#">Begin date</a></a></th>
+            <th><a class="sortable" data-sorted-by="endDate" href="#">End Date</a></th>
+            <th><a class="sortable" data-sorted-by="country" href="#">Country</a></th>
+            <th><a class="sortable" data-sorted-by="company" href="#">Company</a></th>
             <th>Actions</th>
         </tr>
         </thead>
