--- a/src/main/resources/templates/Company/viewHarvestByCompany.html
+++ b/src/main/resources/templates/Company/viewHarvestByCompany.html
@@ -61,4 +61,6 @@
         });
     });
 </script>
+<script th:src="@{/assets/js/utils/getURIParam.js}"></script>
+<script th:src="@{/assets/js/utils/sorting.js}"></script>
 </html>
