--- a/src/main/resources/templates/Company/viewProjectsofCompany.html
+++ b/src/main/resources/templates/Company/viewProjectsofCompany.html
@@ -24,4 +24,6 @@
 </main>
 
 <div th:replace="common/footer :: footer"></div>
+<script th:src="@{/assets/js/utils/getURIParam.js}"></script>
+<script th:src="@{/assets/js/utils/sorting.js}"></script>
 </html>
